# crewai

./: README.md  pyproject.toml  report.md
src/new/: crew.py  main.py
src/new/config/: agents.yaml  tasks.yaml
src/new/tools/: tts.py
