[project]
name = "new"
version = "0.1.0"
description = "new using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0","groq"]

[project.scripts]
new = "new.main:run"
run_crew = "new.main:run"
train = "new.main:train"
replay = "new.main:replay"
test = "new.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
